se modifica el tamaño de la imgen
egeg

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			</div>
 			<!-- /.navbar-static-side -->
 		</nav>
-		<img src="/imagenes/fff.jpg" alt="Smiley face" height="42" width="42">
+		<img src="/imagenes/fff.jpg" alt="Smiley face">
 		<!-- Page Content -->
 		<div id="page-wrapper">
 			<div class="container-fluid">
